<resources>
    <string name="app_name" translatable="false">GachaPoint</string>
    <string name="app_version" translatable="false">0.2.0</string>
    <string name="description">Your open-source, all-in-one companion app for anime gacha RPGs (such as Genshin Impact, Honkai: Star Rail, Zenless Zone Zero, and more). Effortlessly track your wish history, manage savings, and keep tabs on daily pass rewards—all in one secure, fully offline application.</string>
    <string name="copyright_info">All rights belong to their respective copyright holders. This app is not affiliated with Hoyoverse.</string>
    <string name="sheet_header_actions">Actions</string>
    <string name="sheet_header_edit">Edit</string>
    <string name="check_button_text">Mark</string>
    <string name="add_button_text">Add subscription</string>
    <string name="del_button_text">Delete subscription</string>
    <string name="cancel_button_text">Cancel mark</string>
    <string name="change_status_button_text">Recover missed day</string>
    <string name="stat_header">Statistics</string>
    <string name="claim_column_header">Received</string>
    <string name="miss_column_header">Missed</string>
    <string name="later_column_header">Upcoming</string>
    <string name="blessing_of_the_welkin_moon_count_header">Number of moons:</string>
    <string name="star_rail_special_pass_count_header">Number of express passes:</string>
    <string name="inter_knot_member_count_header">Number of Inter-Knot subs:</string>
    <string name="notifications_settings_title">Notifications</string>
    <string name="notifications_settings_time">Notification time:</string>
    <string name="db_settings_title">Storage</string>
    <string name="db_settings_backup_button">Export</string>
    <string name="nav_home">Home</string>
    <string name="nav_tracker">Calendar</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">About app</string>
    <string name="nav_journal">Pulls history</string>
    <string name="nav_menu">Menu</string>
    <string name="genshin" translatable="false">Genshin Impact</string>
    <string name="hsr" translatable="false">Honkai Star Rail</string>
    <string name="zzz" translatable="false">Zenless Zone Zero</string>
    <string name="tab_piggy_bank">Piggy bank</string>
    <string name="tab_pulls">Pulls history</string>
    <string name="add_sub">Subscription added</string>
    <string name="del_sub">Subscription deleted</string>
    <string name="subs_limit">Subscription limit reached</string>
    <string name="check_today">Marking complete!</string>
    <string name="cancel_check_today">Mark removed</string>
    <string name="already_checked">You have already checked in today</string>
    <string name="active_subs_null">You have no active subscriptions.</string>
    <string name="not_miss_day">You already checked in yesterday</string>
    <string name="not_check_today">You haven\'t checked in yet today</string>
    <string name="impossible_cancel_sub">A subscription can only be deleted on the day it was added!</string>
    <string name="calendar_mon">Mon</string>
    <string name="calendar_tue">Tue</string>
    <string name="calendar_wed">Wed</string>
    <string name="calendar_th">Thu</string>
    <string name="calendar_fr">Fri</string>
    <string name="calendar_sa">Sat</string>
    <string name="calendar_su">Sun</string>
    <string name="title_bank">Saved</string>
    <string name="goal_edit_button">Target</string>
    <string name="add_to_bank">Add</string>
    <string name="plus_ten" translatable="false">+10</string>
    <string name="plus_one" translatable="false">+1</string>
    <string name="feedback">Feedback</string>
    <string name="time" translatable="false">:</string>
    <string name="pity_1">Pity 1x</string>
    <string name="pity_2">Pity 2x</string>
    <string name="pity_6">Pity 6x</string>
    <string name="reset">Reset</string>
    <string name="remark_piggy_bank">Pity 1x = 77 pulls</string>
    <string name="db_export_successful">Export successful!</string>
    <string name="db_export_failed">Export failed!</string>
    <string name="notifications_name">Notifications</string>
    <string name="notifications_description">Sends reminders to collect rewards</string>
    <string name="notifications_title">Reminder!</string>
    <string name="notifications_text">Don\'t forget to collect your rewards!</string>
    <string name="five_star" translatable="false">5★</string>
    <string name="four_star" translatable="false">4★</string>
    <string name="three_star" translatable="false">3★</string>
    <string name="add_one_pull">Add 1 pull</string>
    <string name="add_ten_pulls">Add 10 pulls</string>
    <string name="add_five_star">Got 5★</string>
    <string name="add_four_star">Got 4★</string>
    <string name="empty_pulls_list">No pulls yet :(</string>
    <string name="default_pull_content">Unknown</string>
    <string name="add_pull">Add record</string>
    <string name="edit_pull">Edit record</string>
    <string name="hint_input_content">Character/Weapon</string>
    <string name="select_rare">Select item rarity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="type_event">Event</string>
    <string name="type_std">Standard</string>
    <string name="type_spec">Special</string>
    <string name="type_novice">Novice</string>
    <string name="reset_pity">Reset pity</string>
    <string name="goal_not_set_or_reached">Target not set or reached</string>
    <string name="ok_button">Yes</string>
    <string name="cancel_button">No, thanks</string>
    <string name="active_subs_null_question">You have no active subscriptions. Add one?</string>
    <string name="links">Useful links</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="six" translatable="false">6</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_message">Do you really want to delete this record? This action cannot be undone, and the data will be lost forever.</string>
    <string name="delete_sub_confirm_message">Do you really want to delete subscription? This action cannot be undone, and the data will be lost forever.</string>
    <string name="warning">Warning!</string>
    <string name="ui_setting_title">Interface</string>
    <string name="ui_settings_language">Language</string>
    <string name="ui_settings_theme">Theme</string>
    <string name="ui_settings_accessibility">Accessibility</string>
    <string name="vibration">Vibration</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_default">System default</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_eng">English</string>
    <string name="lang_default">System language</string>
    <string name="db_settings_import_button">Import</string>
    <string name="db_import">Data import</string>
    <string name="db_import_message">Import content into the app? Current data may be overwritten!</string>
    <string name="db_import_successful">Import successful!</string>
    <string name="db_import_failed">Import failed!</string>
    <string name="db_error_cannot_open_file">Failed to open the selected file.</string>
    <string name="db_error_invalid_sqlite">The selected file is broken or not a valid SQLite database: </string>
    <string name="db_error_incompatible_schema">Incompatible data base schema!</string>
    <string name="db_error_incorrect_db_version">Incorrect data base version</string>
    <string name="db_error_invalid_file">The selected file is not a valid SQLite database</string>
    <string name="db_error_missing_tables">Missing app tables</string>
    <string name="developer_card_title">Developer</string>
    <string name="developer_username" translatable="false">MenshovAnton</string>
    <string name="form_load_error">Form load error!</string>
</resources>