<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/actionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/sheet_header_actions"
            android:padding="8dp"
            android:textColor="@color/check"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            tools:ignore="VisualLintSystemUi" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutAddSub"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/plus"
            app:tint="@color/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDelSub"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/minus"
            app:tint="@color/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del_button_text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCreateBackup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:importantForAccessibility="no"
            android:src="@drawable/backup"
            app:tint="@color/check"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_settings_backup_button"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/sheet_header_edit"
            android:padding="8dp"
            android:textColor="@color/check"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEditStatus"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:importantForAccessibility="no"
            android:src="@drawable/right_arrow"
            app:tint="@color/check"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_status_button_text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCancelCheck"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:importantForAccessibility="no"
            android:src="@drawable/cross"
            app:tint="@color/check"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>