<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_pulls_counter_more_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/add_to_bank"
            android:textAlignment="viewStart"
            android:textColor="@color/check"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="VisualLintSystemUi" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_add_ten_attempts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_add_ten_attempts"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/icon_plus"
            app:tint="@color/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_add_ten_attempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_ten_wishes"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_one_attempt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_add_one_attempt"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/icon_plus"
            app:tint="@color/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_add_one_attempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_one_wish"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_five_star_drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_five_star"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/five_star"
            android:textColor="@color/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_add_five_star_drop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_five_star"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_four_start_drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="50dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_four_star"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/four_star"
            android:textColor="@color/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_add_four_start_drop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_four_star"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>