<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.more.MoreView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_menu_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/nav_menu"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_item_settings"
            style="@style/Widget.GachaPoint.MaterialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu_header"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/nav_settings"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/icon_settings"
                app:drawableTint="@color/contrast_wb_tint"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_item_feedback"
            style="@style/Widget.GachaPoint.MaterialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcv_item_settings"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/feedback"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/icon_feedback"
                app:drawableTint="@color/contrast_wb_tint"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_item_about"
            style="@style/Widget.GachaPoint.MaterialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcv_item_feedback"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/nav_info"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/icon_about"
                app:drawableTint="@color/contrast_wb_tint"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>